--- a/apps/web/src/styles/colors.css
+++ b/apps/web/src/styles/colors.css
@@ -1,4 +1,137 @@
-/* Full Tailwind Base Colors */
+@theme {
+  --color-*: initial;
+
+  /* Slate (earthy version) */
+  --grey-50:  #fdfcf8;
+  --grey-100: #f4f1ea;
+  --grey-200: #e3ddd0;
+  --grey-300: #c9c0aa;
+  --grey-400: #a89f86;
+  --grey-500: #8c8269;
+  --grey-600: #746d5a;
+  --grey-700: #5c5649;
+  --grey-800: #3f3a30;
+  --grey-900: #2c281e;
+  --grey-1000: #1a170f;
+
+  /* Cherry (deep red) */
+  --cherry-50: #fff4f4;
+  --cherry-100: #ffe6e7;
+  --cherry-200: #f7c3c3;
+  --cherry-300: #ff6565;
+  --cherry-400: #e44444;
+  --cherry-500: #b73939;
+  --cherry-600: #ab2a2a;
+  --cherry-700: #931616;
+  --cherry-800: #8a0a0a;
+  --cherry-900: #811123;
+  --cherry-1000: #671213;
+
+  /* Tangerine (soft orange) */
+  --tangerine-50: #fff3ea;
+  --tangerine-100: #ffdbc2;
+  --tangerine-200: #ffc088;
+  --tangerine-300: #feac55;
+  --tangerine-400: #f89938;
+  --tangerine-500: #f88017;
+  --tangerine-600: #f66e05;
+  --tangerine-700: #d96c39;
+  --tangerine-800: #cf5c27;
+  --tangerine-900: #ba4914;
+  --tangerine-1000: #903a12;
+
+  /* Amber (clay-like gold) */
+  --amber-50:  #fffbf0;
+  --amber-100: #fef4d9;
+  --amber-200: #fbf49c;
+  --amber-300: #f8cd72;
+  --amber-400: #eab32f;
+  --amber-500: #c98f0a;
+  --amber-600: #a36d07;
+  --amber-700: #805607;
+  --amber-800: #624206;
+  --amber-900: #4c3305;
+  --amber-1000: #2f1e03;
+
+  /* Olive-green (using lime & green mix) */
+  --olive-50:  #f3fbed;
+  --olive-100: #e1f5d1;
+  --olive-200: #c2e7a4;
+  --olive-300: #a5d373;
+  --olive-400: #86b94a;
+  --olive-500: #6b9934;
+  --olive-600: #547a29;
+  --olive-700: #3f5b1f;
+  --olive-800: #2f4517;
+  --olive-900: #233513;
+  --olive-1000: #121d08;
+
+  /* Teal (using blue & green mix) */
+  --teal-50:  #f0fdfa;
+  --teal-100: #e6fff9;
+  --teal-200: #acf8e2;
+  --teal-300: #7be7bc;
+  --teal-400: #6dc497;
+  --teal-500: #4ba58e;
+  --teal-600: #339999;
+  --teal-700: #007478;
+  --teal-800: #005f5a;
+  --teal-900: #0b4f4a;
+  --teal-1000: #022f2e;
+
+  /* Sky (deep blue) */
+  --sky-50:  #f2fbff;
+  --sky-100: #e3f6ff;
+  --sky-200: #b7e7ff;
+  --sky-300: #8cd8ff;
+  --sky-400: #4dc0f9;
+  --sky-500: #0794dc;
+  --sky-600: #016699;
+  --sky-700: #154d8c;
+  --sky-800: #10377b;
+  --sky-900: #0e236d;
+  --sky-1000: #0f1031;
+
+  /* Fuchsia (pink and purples) */
+  --fuchsia-50:  #fbeeff;
+  --fuchsia-100: #f8e2ff;
+  --fuchsia-200: #f2cdff;
+  --fuchsia-300: #e8a4ff;
+  --fuchsia-400: #df80ff;
+  --fuchsia-500: #d453ff;
+  --fuchsia-600: #c128f4;
+  --fuchsia-700: #9b0ccb;
+  --fuchsia-800: #74049a;
+  --fuchsia-900: #550271;
+  --fuchsia-1000: #3f0b4f;
+
+  --color-white: #FFFFFF;
+  --color-black: #000000;
+  --color-contrast: #FFFFFF;
+
+  --color-primary: var(--colors-tangerine-400);
+  --color-primary-light: var(--colors-tangerine-100);
+  --color-primary-dark: var(--colors-tangerine-600);
+  --color-secondary: var(--colors-teal-400);
+  --color-secondary-light: var(--colors-teal-100);
+  --color-secondary-dark: var(--colors-teal-600);
+  --color-accent: var(--colors-fuchsia-600);
+  --color-accent-light: var(--colors-fuchsia-300);
+  --color-accent-dark: var(--colors-fuchsia-1000);
+  --color-success: var(--colors-olive-500);
+  --color-success-light: var(--colors-olive-100);
+  --color-success-dark: var(--colors-olive-700);
+  --color-warning: var(--colors-amber-300);
+  --color-warning-light: var(--colors-amber-200);
+  --color-warning-dark: var(--colors-amber-600);
+  --color-error: var(--colors-cherry-700);
+  --color-error-light: var(--colors-cherry-300);
+  --color-error-dark: var(--colors-cherry-900);
+  --color-info: var(--colors-sky-600);
+  --color-info-light: var(--colors-sky-300);
+  --color-info-dark: var(--colors-sky-1000);
+}
+
 :root {
   /* Slate (earthy version) */
   --grey-50:  #fdfcf8;
@@ -103,15 +236,17 @@
   --fuchsia-800: #74049a;
   --fuchsia-900: #550271;
   --fuchsia-1000: #3f0b4f;
-}
 
-@theme {
-  --color-primary: var(--colors-tangerine-400);
-  --color-primary-light: var(--colors-tangerine-100);
-  --color-primary-dark: var(--colors-tangerine-600);
-  --color-secondary: var(--colors-teal-400);
-  --color-secondary-light: var(--colors-teal-100);
-  --color-secondary-dark: var(--colors-teal-600);
+  --color-white: #FFFFFF;
+  --color-black: #000000;
+  --color-contrast: #FFFFFF;
+
+  --color-primary: var(--colors-tangerine-400, #f89938);
+  --color-primary-light: var(--colors-tangerine-100, #ffdbc2);
+  --color-primary-dark: var(--colors-tangerine-600, #f66e05);
+  --color-secondary: var(--colors-teal-400, #6dc497);
+  --color-secondary-light: var(--colors-teal-100, #e6fff9);
+  --color-secondary-dark: var(--colors-teal-600, #339999);
   --color-accent: var(--colors-fuchsia-600);
   --color-accent-light: var(--colors-fuchsia-300);
   --color-accent-dark: var(--colors-fuchsia-1000);
@@ -127,4 +262,94 @@
   --color-info: var(--colors-sky-600);
   --color-info-light: var(--colors-sky-300);
   --color-info-dark: var(--colors-sky-1000);
+}
+
+.dark {
+  --color-tangerine-1000:#ffdbc2;
+  --color-tangerine-900:#ffc088;
+  --color-tangerine-800:#feac55;
+  --color-tangerine-700:#ff9421;
+  --color-tangerine-600:#ff9537;
+  --color-tangerine-500:#fb8429;
+  --color-tangerine-400:#d96c39;
+  --color-tangerine-300:#cf5c27;
+  --color-tangerine-200:#ba4914;
+  --color-tangerine-100:#903a12;
+  --color-amber-1000:#ffe2a7;
+  --color-amber-900:#ffce68;
+  --color-amber-800:#ffbe39;
+  --color-amber-700:#feb92c;
+  --color-amber-600:#f0a202;
+  --color-amber-500:#db9c08;
+  --color-amber-400:#d78e06;
+  --color-amber-300:#c5790f;
+  --color-amber-200:#ad6008;
+  --color-amber-100:#6d3a0e;
+  --color-sky-1000:#baeeff;
+  --color-sky-900:#75d7f7;
+  --color-sky-800:#50c8f1;
+  --color-sky-700:#3ac4f4;
+  --color-sky-600:#22a6d3;
+  --color-sky-500:#1d8baf;
+  --color-sky-400:#217f9f;
+  --color-sky-300:#14617b;
+  --color-sky-200:#11546a;
+  --color-sky-100:#0b3948;
+  --color-cherry-1000:#ffd6d7;
+  --color-cherry-900:#ffb4b6;
+  --color-cherry-800:#f75a5d;
+  --color-cherry-700:#d13d40;
+  --color-cherry-600:#c52b2e;
+  --color-cherry-500:#c92530;
+  --color-cherry-400:#ae172e;
+  --color-cherry-300:#a8122d;
+  --color-cherry-200:#811123;
+  --color-cherry-100:#671213;
+  --color-teal-1000:#d1ffff;
+  --color-teal-900:#93d3d0;
+  --color-teal-800:#82c5be;
+  --color-teal-700:#45a9a7;
+  --color-teal-600:#3b918f;
+  --color-teal-500:#2e8281;
+  --color-teal-400:#23706f;
+  --color-teal-300:#1f6c69;
+  --color-teal-200:#126367;
+  --color-teal-100:#0b5054;
+  --color-fuchsia-1000:#f7e8ff;
+  --color-fuchsia-900:#d5b4ee;
+  --color-fuchsia-800:#b89ce2;
+  --color-fuchsia-700:#a589ce;
+  --color-fuchsia-600:#9c80c5;
+  --color-fuchsia-500:#7d5fab;
+  --color-fuchsia-400:#7254a0;
+  --color-fuchsia-300:#5e4684;
+  --color-fuchsia-200:#43315e;
+  --color-fuchsia-100:#302343;
+  --color-olive-1000:#deffe1;
+  --color-olive-900:#c4feca;
+  --color-olive-800:#9df994;
+  --color-olive-700:#75f673;
+  --color-olive-600:#64ee74;
+  --color-olive-500:#51dc61;
+  --color-olive-400:#3ecb73;
+  --color-olive-300:#3da364;
+  --color-olive-200:#30794c;
+  --color-olive-100:#205735;
+
+  /* Greyscale */
+  --color-white: #000000;
+  --color-black: #FFFFFF;
+  --color-contrast: #000000;
+  
+  --color-grey-1000:#f6f5f7;
+  --color-grey-900:#f4f2f2;
+  --color-grey-800:#efefef;
+  --color-grey-700:#ebebeb;
+  --color-grey-600:#ccc9c9;
+  --color-grey-500:#bdbcbc;
+  --color-grey-400:#9b9898;
+  --color-grey-300:#7e7b7b;
+  --color-grey-200:#5b5757;
+  --color-grey-100:#424040;
+  --color-grey-50:#2e2b2b;
 }
