feat: adjust colors and typography

--- a/apps/web/src/styles/typography.css
+++ b/apps/web/src/styles/typography.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap');
 
 @layer utilities {
@@ -57,71 +58,80 @@
 }
 
 @layer components {
-  .h1 {
-    @apply font-medium;
-    font-family: var(--font-montserrat);
-    font-size: var(--text-8xl);
-    line-height: var(--leading-tight);
-    letter-spacing: var(--tracking-normal);
-    margin: 0;
-  }
+  .typography {
+    p {
+      font-family: var(--font-roboto);
+      font-size: var(--text-base);
+      line-height: var(--leading-tight);
+      color: var(--text-default);
+      margin: 0;
+    }
 
-  .h2 {
-    @apply font-medium;
-    font-family: var(--font-montserrat);
-    font-size: var(--text-6xl);
-    letter-spacing: var(--tracking-normal);
-    margin: 0;
-  }
+    h1 {
+      font-family: var(--font-montserrat);
+      font-weight: var(--font-semibold);
+      font-size: var(--text-8xl);
+      line-height: var(--leading-tight);
+      letter-spacing: var(--tracking-normal);
+      color: var(--text-primary);
+      margin: 0;
+    }
 
-  .h3 {
-    @apply font-medium;
-    font-family: var(--font-montserrat);
-    font-size: var(--text-5xl);
-    line-height: var(--leading-tight);
-    letter-spacing: var(--tracking-normal);
-    margin: 0;
-  }
+    h2 {
+      font-family: var(--font-montserrat);
+      font-weight: var(--font-semibold);
+      font-size: var(--text-6xl);
+      line-height: var(--leading-tight);
+      letter-spacing: var(--tracking-normal);
+      color: var(--text-primary);
+      margin: 0;
+    }
 
-  .h4 {
-    @apply font-medium;
-    font-family: var(--font-montserrat);
-    font-size: var(--text-4xl);
-    letter-spacing: var(--tracking-normal);
-    margin: 0;
-  }
+    h3 {
+      font-family: var(--font-montserrat);
+      font-weight: var(--font-medium);
+      font-size: var(--text-5xl);
+      line-height: var(--leading-tight);
+      letter-spacing: var(--tracking-normal);
+      color: var(--text-primary);
+      margin: 0;
+    }
 
-  .body {
-    font-family: var(--font-lora);
-    font-size: var(--text-base);
-    line-height: var(--leading-tight);
-    margin: 0;
-  }
+    h4 {
+      font-family: var(--font-montserrat);
+      font-weight: var(--font-medium);
+      font-size: var(--text-4xl);
+      letter-spacing: var(--tracking-normal);
+      color: var(--text-default);
+      margin: 0;
+    }
 
-  .body-semibold {
-    @apply font-semibold;
-    font-family: var(--font-lora);
-    font-size: var(--text-base);
-    line-height: var(--leading-tight);
-    margin: 0;
-  }
+    strong {
+      font-weight: var(--font-semibold);
+    }
 
-  .body-large {
-    @apply font-normal;
-    font-family: var(--font-lora);
-    font-size: var(--text-lg);
-    line-height: var(--leading-tight);
-  }
+    .body-lg {
+      font-family: var(--font-roboto);
+      font-size: var(--text-lg);
+      line-height: var(--leading-tight);
+      color: var(--text-default);
+      margin: 0;
+    }
 
-  .body-2 {
-    @apply font-light;
-    font-family: var(--font-lora);
-    font-size: var(--text-sm);
-    line-height: var(--leading-tight);
-  }
+    .body-sm {
+      font-family: var(--font-roboto);
+      font-size: var(--text-sm);
+      line-height: var(--leading-tight);
+      color: var(--text-default);
+      margin: 0;
+    }
 
-  .navlink {
-    @apply font-medium text-lg no-underline;
-    font-family: var(--font-lora);
+    .body-xs {
+      font-family: var(--font-roboto);
+      font-size: var(--text-xs);
+      line-height: var(--leading-tight);
+      color: var(--text-default);
+      margin: 0;
+    }
   }
 }
